<resources>
    <!--activity_main-->
    <string name="Sensing_box">Sensing Box</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>

    <!--activity_login_register-->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="box_number">Box Number</string>

    <!--activity_main_screen-->
    <string name="Welcome">Welcome,</string>
    <string name="Sensor">SENSOR</string>
    <string name="User_info">使用者資訊</string>
    <string name="Cloud_data">雲端資料查詢</string>
    <string name="Upload_data">上傳資料</string>

    <!--activity_select_bluetooth-->
    <string name="your_device">Your Device:</string>
    <string name="available_devices">Available Devices:</string>
    <string name="my_box">My Box</string>
    <string name="SB_1">Sensing Box 1</string>
    <string name="SB_2">Sensing Box 2</string>
    <string name="SB_3">Sensing Box 3</string>

    <!--activity_select_bluetooth-->
    <string name="uploading_data">Uploading data...</string>

    <!--activity_sensor_select-->
    <string name="click_to_add_sensor">Click to add sensor</string>
    <string name="Sensor_bottom_1">以上顯示sensor在box上的相對位置</string>
    <string name="Sensor_bottom_2">點擊空的欄位以新增sensor\n點擊現有的sensor以修改設定</string>

    <!--activity_qr_code_scanner-->
    <string name="sensor_code">Sensor Code</string>

    <!--activity_add_sensor-->
    <string name="add_sensor">Add Sensor</string>

    <!--activity_edit_sensor-->
    <string name="edit_sensor">Edit Sensor</string>
    <string name="delete_sensor">Delete this sensor</string>
    <string name="cycle">Collection cycle (seconds):</string>
    <string name="path">Data Storage Path:</string>
    <string name="status">Sensor Status:</string>

    <!--activity_upload_success-->
    <string name="success">Success</string>
    <string name="upload_count">Uploaded:</string>
    <string name="total_count">Total:</string>
    <string name="ok">OK</string>

    <!--activity_upload_failed-->
    <string name="failed">Failed</string>
    <string name="connection_check">Please check your network connection.</string>
    <string name="retry">RETRY</string>
    <string name="do_it_later">DO IT LATER</string>

    <!--activity_about-->
    <string name="About">關於</string>

    <string name="App_Developer">App Developer:</string>

    <string name="Version">Version:</string>

    <string name="Last_Updated">Last Updated:</string>

    <string name="Contact">Contact Us:</string>

    <!--activity_user_info-->


    <string name="user_name">Username:</string>

    <string name="Email2">Email:</string>

    <string name="box_info">Box Info:</string>

    <!--activity_cdb_uploadtest-->


    <string name="get_local_img">取得照片</string>

    <string name="do_nothing">無權限無法做事!</string>

    <string name="download_file">下載照片</string>

    <string name="upload_file">上傳照片</string>

    <string name="load_img_fail">讀取圖片失敗</string>

    <string name="plz_pick_img">請選取照片</string>

    <string name="upload_success">上傳成功</string>

    <string name="download_success">下載成功</string>

    <string name="download_fail">下載失敗</string>

    <string name="delete_success">刪除成功</string>

    <string name="plz_upload_img">請先上傳照片</string>

</resources>
