<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/Background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/User_Info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/User_info"
        android:layout_marginTop="100dp"
        android:textColor="@color/Text_Color"
        android:textSize="@dimen/Title_Size" />

    <TextView
        android:id="@+id/Username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="80dp"
        android:text="@string/user_name"
        android:textColor="@color/Text_Color"
        android:textSize="@dimen/Text_Size_Small" />

    <TextView
        android:id="@+id/Box_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="80dp"
        android:text="@string/box_number"
        android:textColor="@color/Text_Color"
        android:textSize="@dimen/Text_Size_Small" />

    <TextView
        android:id="@+id/email2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="80dp"
        android:text="@string/Email2"
        android:textColor="@color/Text_Color"
        android:textSize="@dimen/Text_Size_Small" />

    <TextView
        android:id="@+id/box_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="80dp"
        android:text="@string/box_info"
        android:textColor="@color/Text_Color"
        android:textSize="@dimen/Text_Size_Small" />


</LinearLayout>