<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D6EAF8"
    tools:context=".upload_success">

    <TextView
        android:id="@+id/success"
        android:layout_width="185dp"
        android:layout_height="0dp"
        android:layout_marginTop="97dp"
        android:layout_marginBottom="2dp"
        android:gravity="center"
        android:text="@string/success"
        android:textColor="#00FF00"
        android:textSize="46sp"
        app:layout_constraintBottom_toTopOf="@+id/uploaded"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/uploaded"
        android:layout_width="341dp"
        android:layout_height="0dp"
        android:layout_marginEnd="22dp"
        android:layout_marginRight="22dp"
        android:text="@string/upload_count"
        android:textColor="#17202A"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/total"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/success" />

    <TextView
        android:id="@+id/total"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="167dp"
        android:text="@string/total_count"
        android:textColor="#17202A"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/uploaded"
        app:layout_constraintStart_toStartOf="@+id/uploaded"
        app:layout_constraintTop_toBottomOf="@+id/uploaded" />

    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="181dp"
        android:background="#21618C"
        android:text="@string/ok"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/total" />

</android.support.constraint.ConstraintLayout>