<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background"
    android:orientation="vertical"
    tools:context=".add_sensor">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:gravity="center_horizontal"
        android:text="@string/add_sensor"
        android:textColor="@color/Text_Color"
        android:textSize="@dimen/Title_Size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button21"
        android:layout_width="208dp"
        android:layout_height="70dp"
        android:layout_marginBottom="150dp"
        android:layout_marginLeft="64dp"
        android:layout_marginRight="64dp"
        android:background="@color/Button_Color"
        android:gravity="center"
        android:onClick="edit_sensor"
        android:text="@string/edit_sensor"
        android:textColor="@color/Button_Text_Color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/button22"
        android:layout_width="208dp"
        android:layout_height="70dp"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="64dp"
        android:layout_marginRight="64dp"
        android:background="@color/Button_Color"
        android:gravity="center"
        android:onClick="ok"
        android:text="@string/ok"
        android:textColor="@color/Button_Text_Color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:layout_marginLeft="64dp"
        android:layout_marginRight="64dp"
        android:text="@string/sensor_code"
        android:textColor="@color/Text_Color"
        android:textSize="@dimen/Text_Size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>