<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background"
    android:orientation="vertical"
    tools:context=".main_screen">

    <TextView
        android:id="@+id/Welcome"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="64dp"
        android:layout_marginRight="64dp"
        android:gravity="center"
        android:textColor="@color/Text_Color"
        android:textSize="@dimen/Title_Size"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/button"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:background="@color/Button_Green"
        android:onClick="goTo_Sensor_Select"
        android:text="@string/Sensor"
        android:textColor="@color/Button_Text_Color"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginTop="180dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:background="@color/Button_Pink"
        android:onClick="goTo_User_Info"
        android:text="@string/User_info"
        android:textColor="@color/Button_Text_Color"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginTop="330dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:background="@color/Button_Yellow"
        android:onClick="goTo_Cloud_Data"
        android:text="@string/Cloud_data"
        android:textColor="@color/Button_Text_Color"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginTop="330dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:background="@color/Button_Blue"
        android:onClick="goTo_About"
        android:text="@string/About"
        android:textColor="@color/Button_Text_Color"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginTop="480dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:background="@color/Button_Brown"
        android:onClick="goTo_Upload_Data"
        android:text="@string/Upload_data"
        android:textColor="@color/Button_Text_Color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>